style: fixed accessories gap issue on large screen

--- a/styles.css
+++ b/styles.css
@@ -392,13 +392,12 @@ i.credits-icon {
 }
 
 .accessories-types {
-  overflow-x: auto; /* Allow horizontal scrolling if necessary */
+  overflow-x: auto;
 }
 
 .accessories-types nav {
   display: flex;
   gap: 30px;
-  white-space: nowrap; /* Prevent wrapping initially */
 }
 
 .accessories-types ul {
@@ -406,14 +405,14 @@ i.credits-icon {
   padding: 0;
   margin: 0;
   display: flex;
-  flex-wrap: wrap; /* Allow items to wrap onto new lines */
+  flex-wrap: wrap;
 }
 
 .accessories-types li {
   cursor: pointer;
-  margin-bottom: 10px; /* Add spacing between items */
+  margin-bottom: 10px;
+  padding-right: 15px;
 }
-
 .accessories-types .active {
   color: #a00000;
 }
